--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
       <nav class="nav-container">
         <ul class="nav-menu">
-            <li><a href="../first/index.html" target="_self" class="active"><b>Главная страница</b></a></li>
+            <li><a href="../index.html" target="_self" class="active"><b>Главная страница</b></a></li>
             <li><a href="#full-image" class="nav-icon">
                 <img src="https://avatars.mds.yandex.net/i?id=fe8e6f3e7b1935186697f4550253f27ba65e5035-10289644-images-thumbs&n=13" height="15px" alt="Увеличить изображение">
             </a></li>
             <li><a href="https://flowwow.com/blog/kak-ukhazhivat-za-kaktusom/" target="_blank"><b>Полезные советы</b></a></li>
-            <li><a href="../first/order.html" target="_self"><b>Оформить заказ</b></a></li>
-            <li><a href="../first/cactus.html" target="_self"><b>Уход за кактусом</b></a></li>
-            <li><a href="../first/assortment.html" target="_self"><b>Ассортимент</b></a></li>
-            <li><a href="../first/passport.html" target="_self"><b>Паспорт и задача</b></a></li>
+            <li><a href="../order.html" target="_self"><b>Оформить заказ</b></a></li>
+            <li><a href="../cactus.html" target="_self"><b>Уход за кактусом</b></a></li>
+            <li><a href="../assortment.html" target="_self"><b>Ассортимент</b></a></li>
+            <li><a href="../passport.html" target="_self"><b>Паспорт и задача</b></a></li>
             <li><a href="https://ru.wikipedia.org/wiki/Кактусовые" target="_blank">
                 <img src="https://avatars.mds.yandex.net/i?id=517f351a8c74a73dfc6199c0896f6c6152ee88be-10129407-images-thumbs&n=13" height="15px" alt="Википедия">
             </a></li>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="cactus-card">
-            <img src="../first/photos/33.jpg" alt="Шлюмбергера" class="cactus-image" height="200px">
+            <img src="../photos/33.jpg" alt="Шлюмбергера" class="cactus-image" height="200px">
             <div class="cactus-name"><b>Шлюмбергера</b></div>
             <div class="cactus-description">
                 Также известен как "Декабрист". Цветет зимой, создавая праздничное настроение.
@@ -71,7 +71,7 @@
         </div>
 
         <div class="cactus-card">
-            <img src="../first/photos/55.jpg" alt="Гимнокалициум" class="cactus-image" height="200px">
+            <img src="../photos/55.jpg" alt="Гимнокалициум" class="cactus-image" height="200px">
             <div class="cactus-name"><b>Гимнокалициум</b></div>
             <div class="cactus-description">
                 Отличается шаровидной формой и разнообразием окраски. Цветет с раннего возраста.
@@ -79,7 +79,7 @@
         </div>
 
         <div class="cactus-card">
-            <img src="../first/photos/77.png" alt="Лофофора" class="cactus-image" height="200px">
+            <img src="../photos/77.png" alt="Лофофора" class="cactus-image" height="200px">
             <div class="cactus-name"><b>Лофофора</b></div>
             <div class="cactus-description">
                 Также известен как "Пейот". Имеет уникальный внешний вид и требует особых условий содержания.
