--- a/assortment.html
+++ b/assortment.html
@@ -12,12 +12,12 @@
 <body>
  <nav class="nav-container">
         <ul class="nav-menu">
-            <li><a href="../first/index.html" target="_self"><b>Главная страница</b></a></li>
+            <li><a href="./first/index.html" target="_self"><b>Главная страница</b></a></li>
             <li><a href="https://flowwow.com/blog/kak-ukhazhivat-za-kaktusom/" target="_blank"><b>Полезные советы</b></a></li>
-            <li><a href="../first/order.html" target="_self"><b>Оформить заказ</b></a></li>
-            <li><a href="../first/cactus.html" target="_self"><b>Уход за кактусом</b></a></li>
-            <li><a href="../first/assortment.html" target="_self" class="active"><b>Ассортимент</b></a></li>
-            <li><a href="../first/passport.html" target="_self"><b>Паспорт и задача</b></a></li>
+            <li><a href="./first/order.html" target="_self"><b>Оформить заказ</b></a></li>
+            <li><a href="./first/cactus.html" target="_self"><b>Уход за кактусом</b></a></li>
+            <li><a href="./first/assortment.html" target="_self" class="active"><b>Ассортимент</b></a></li>
+            <li><a href="./first/passport.html" target="_self"><b>Паспорт и задача</b></a></li>
             <li><a href="https://ru.wikipedia.org/wiki/Кактусовые" target="_blank">
                 <img src="https://avatars.mds.yandex.net/i?id=517f351a8c74a73dfc6199c0896f6c6152ee88be-10129407-images-thumbs&n=13" height="15px" alt="Википедия">
             </a></li>
@@ -38,7 +38,7 @@
       </td>
 
       <td bgcolor="lightgreen" width="300px" >
-        <img src="../first/photos/notokaktus.jpg" width="320">
+        <img src="./first/photos/notokaktus.jpg" width="320">
       </td>
 
       <td>
@@ -56,7 +56,7 @@
   </table>
   <br>
     <table align="center" cellspacing="10" cellpadding="20" border="2" width="320px"
-    background="../first/fon1.jpg">
+    background="./first/fon1.jpg">
 
     <tr>
       <td align="center" colspan="3"   height="20px">
@@ -70,7 +70,7 @@
       </td>
 
       <td bgcolor="lightgreen" width="300px" >
-        <img src="../first/photos/tserus.jpg" width="320">
+        <img src="./first/photos/tserus.jpg" width="320">
       </td>
 
       <td>
@@ -87,7 +87,7 @@
     </tr>
   </table>
   <table align="center" cellspacing="10" cellpadding="20" border="2" width="320px"
-    background="../first/fon1.jpg">
+    background="./first/fon1.jpg">
 <br>
     <tr>
       <td colspan="3"    height="20px">
@@ -101,7 +101,7 @@
       </td>
 
       <td bgcolor="lightgreen" width="300px" background="../">
-        <img src="../first/photos/ripsalis.jpg" width="320">
+        <img src="./first/photos/ripsalis.jpg" width="320">
       </td>
 
       <td>
