--- a/assortment.html
+++ b/assortment.html
@@ -12,19 +12,19 @@
 <body>
  <nav class="nav-container">
         <ul class="nav-menu">
-            <li><a href="./first/index.html" target="_self"><b>Главная страница</b></a></li>
+            <li><a href="./index.html" target="_self"><b>Главная страница</b></a></li>
             <li><a href="https://flowwow.com/blog/kak-ukhazhivat-za-kaktusom/" target="_blank"><b>Полезные советы</b></a></li>
-            <li><a href="./first/order.html" target="_self"><b>Оформить заказ</b></a></li>
-            <li><a href="./first/cactus.html" target="_self"><b>Уход за кактусом</b></a></li>
-            <li><a href="./first/assortment.html" target="_self" class="active"><b>Ассортимент</b></a></li>
-            <li><a href="./first/passport.html" target="_self"><b>Паспорт и задача</b></a></li>
+            <li><a href="./order.html" target="_self"><b>Оформить заказ</b></a></li>
+            <li><a href="./cactus.html" target="_self"><b>Уход за кактусом</b></a></li>
+            <li><a href="./assortment.html" target="_self" class="active"><b>Ассортимент</b></a></li>
+            <li><a href="./passport.html" target="_self"><b>Паспорт и задача</b></a></li>
             <li><a href="https://ru.wikipedia.org/wiki/Кактусовые" target="_blank">
                 <img src="https://avatars.mds.yandex.net/i?id=517f351a8c74a73dfc6199c0896f6c6152ee88be-10129407-images-thumbs&n=13" height="15px" alt="Википедия">
             </a></li>
         </ul>
     </nav>
   <table align="center" cellspacing="10" cellpadding="20" border="2" width="320px"
-    background="../first/fon1.jpg">
+    background="./fon1.jpg">
 
     <tr>
       <td align="center" colspan="3"    height="20px">
@@ -38,7 +38,7 @@
       </td>
 
       <td bgcolor="lightgreen" width="300px" >
-        <img src="./first/photos/notokaktus.jpg" width="320">
+        <img src="./photos/notokaktus.jpg" width="320">
       </td>
 
       <td>
@@ -56,7 +56,7 @@
   </table>
   <br>
     <table align="center" cellspacing="10" cellpadding="20" border="2" width="320px"
-    background="./first/fon1.jpg">
+    background="./fon1.jpg">
 
     <tr>
       <td align="center" colspan="3"   height="20px">
@@ -70,7 +70,7 @@
       </td>
 
       <td bgcolor="lightgreen" width="300px" >
-        <img src="./first/photos/tserus.jpg" width="320">
+        <img src="./photos/tserus.jpg" width="320">
       </td>
 
       <td>
@@ -87,7 +87,7 @@
     </tr>
   </table>
   <table align="center" cellspacing="10" cellpadding="20" border="2" width="320px"
-    background="./first/fon1.jpg">
+    background="./fon1.jpg">
 <br>
     <tr>
       <td colspan="3"    height="20px">
@@ -101,7 +101,7 @@
       </td>
 
       <td bgcolor="lightgreen" width="300px" background="../">
-        <img src="./first/photos/ripsalis.jpg" width="320">
+        <img src="./photos/ripsalis.jpg" width="320">
       </td>
 
       <td>
@@ -119,7 +119,7 @@
   </table>
 <br> 
 <table align="center" cellspacing="10" cellpadding="20" border="2" width="320px"
-    background="../first/fon1.jpg">
+    background="./fon1.jpg">
 <br>
     <tr>
       <td colspan="3"    height="20px">
@@ -133,7 +133,7 @@
       </td>
 
       <td bgcolor="lightgreen" width="300px" background="../">
-        <img src="../first/photos/Astrophytum.JPG" width="320">
+        <img src="./photos/Astrophytum.JPG" width="320">
       </td>
 
       <td>
@@ -152,7 +152,7 @@
 <br> 
  
 <table align="center" cellspacing="10" cellpadding="20" border="2" width="320px"
-    background="../first/fon1.jpg">
+    background="./fon1.jpg">
 <br>
     <tr>
       <td  align = "center" colspan="3"    height="20px">
@@ -166,7 +166,7 @@
       </td>
 
       <td bgcolor="lightgreen" width="300px" background="../">
-        <img src="../first/photos/klejstokaktus_vintera_4.jpg" width="320">
+        <img src="./photos/klejstokaktus_vintera_4.jpg" width="320">
       </td>
 
       <td>
@@ -182,6 +182,6 @@
       </td>
     </tr>
   </table>
-   <a href="../first/assortment.html#title1" target="_self" style="cursor: pointer; color: #2e7d32; text-decoration: underline;">Вернуться в начало</a><br>
-    <a href="../first/index.html" target="_self" style="cursor: pointer; color: #2e7d32; text-decoration: underline;">Вернуться на главную</a>
+   <a href="./assortment.html#title1" target="_self" style="cursor: pointer; color: #2e7d32; text-decoration: underline;">Вернуться в начало</a><br>
+    <a href="./index.html" target="_self" style="cursor: pointer; color: #2e7d32; text-decoration: underline;">Вернуться на главную</a>
 </body>
